updated oflow presentation

--- a/slides/occupancy-flow/index.html
+++ b/slides/occupancy-flow/index.html
@@ -38,6 +38,7 @@
 				<!-- Add your slides here -->
 				<section data-markdown="slides/title.html"></section>	
 				<section data-markdown="slides/oflow-intro.html"></section>
+				<section data-markdown="slides/method.html"></section>
 				<section data-markdown="slides/oflow-experiments.html"></section>
 				<section data-markdown="slides/conclusion.html"></section>
 			</div>
