--- a/slides/occupancy-flow/slides/conclusion.html
+++ b/slides/occupancy-flow/slides/conclusion.html
@@ -3,23 +3,21 @@
 ## Conclusion
 
 <div class="column-1 flex-col">
+        <div class="figure">
+                <img src="gfx/oflow/method/vector_field.svg" width="40%">
+            </div>
     <ul style="width:80%; align-self: center;">
         <li class="fragment"> 
-            Deep learning in <strong>function space</strong>
-            allows to efficiently represent <strong>high dimensional 3D-data</strong> (occupancy, texture, motion, ...)
+            We introduce the novel 4D representation <strong>Occupancy Flow</strong>
+            <ul style="width:80%; align-self: center;">            
+            <li class="fragment">Spatially and temporally continuous</li>
+            <li class="fragment">Implicit correspondences</li>   
+            <li class="fragment">Fast inference</li>
+            </ul>
         </li>
         <li class="fragment">
-            In contrast to existing representations, our representations <strong>does not discretize</strong> during training
+            Can be used for a variety of tasks
         </li>
-        <li class="fragment">
-            This drastically reduces the <strong>memory requirements</strong> during <strong>training</strong>
-        </li>
-        <li class="fragment">
-            During <strong>inference</strong> we can use fast <strong>specialized algorithms</strong>
-        </li>
-        <!-- <li class="fragment">
-            Our technique is applicable to both <strong>generative</strong> and <strong>discriminative</strong> tasks
-        </li> -->
     </ul>
 </div>
 
@@ -27,7 +25,7 @@
 
 <!-- .slide: class="layout-1x1" -->
 
-## References
+## Projects
 
 <div class="column-1 flex-col">
     <ul style="width:90%; align-self: center; font-size: 90%">
