--- a/sdfstudio/index.html
+++ b/sdfstudio/index.html
@@ -330,7 +330,7 @@
         <h3 class="title is-4">Mono-NeuS</h3>
         <div class="content has-text-justified">
           <p>
-            We can also apply the idea of MonoSDF to NeuS, as shown here for the Tanks and Temples dataset Auditorium scene:
+            We can also apply the idea of MonoSDF to NeuS, as shown here on the Tanks and Temples dataset Auditorium scene:
           </p>
         </div>
         
