--- a/sdfstudio/index.html
+++ b/sdfstudio/index.html
@@ -406,7 +406,7 @@
         <h2 class="title is-3" style="margin-top: -30px">Viewer</h2>
         <div class="content has-text-justified">
           <p>
-            Nerfstudio's viewer can be used for interactive visualization of rendered RGB images, depth and normals.
+            Nerfstudio's viewer can be used for interactive visualization of rendered RGB images, depths and normals.
           </p>
         </div>
         <div class="content has-text-centered" style="overflow: hidden;">
