--- a/sdfstudio/index.html
+++ b/sdfstudio/index.html
@@ -432,7 +432,7 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>@misc{Yu2022SDFStudio,
     author    = {Zehao Yu, Anpei Chen, Bozidar Antic, Songyou Peng, Apratim Bhattacharyya,
-                 Michael Niemeyer, Siyu Tang Torsten Sattler and Andreas Geiger},
+                 Michael Niemeyer, Siyu Tang, Torsten Sattler, and Andreas Geiger},
     title     = {SDFStudio: A Unified Framework for Surface Reconstruction},
     year      = {2022},
     url       = {https://github.com/autonomousvision/sdfstudio},
