--- a/sdfstudio/index.html
+++ b/sdfstudio/index.html
@@ -392,6 +392,39 @@
           
         </div>
 
+        <h3 class="title is-4">NeuS-RGBD</h3>
+        <div class="content has-text-justified">
+          <p>
+            SDFStudio also supports RGB-D data to obtain high-quality 3D reconstruction. Here for example, we train NeuS on the synthetic rgbd dataset from neural rgbd surface reconstruction:
+          </p>
+        </div>
+        
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 autoplay
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 loop
+                 width="49%">
+            <source src="./resources/neus-rgbd-kitchen.mp4"
+                    type="video/mp4">
+          </video>
+          <video id="replay-video"
+                 autoplay
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 loop
+                 width="49%">
+            <source src="./resources/neus-rgbd-breakfast.mp4"
+                    type="video/mp4">
+          </video>
+
+        </div>
+
       </div>
     </div>
 
