--- a/sdfstudio/index.html
+++ b/sdfstudio/index.html
@@ -464,8 +464,8 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@misc{Yu2022SDFStudio,
-    author    = {Zehao Yu, Anpei Chen, Bozidar Antic, Songyou Peng, Apratim Bhattacharyya,
-                 Michael Niemeyer, Siyu Tang, Torsten Sattler, and Andreas Geiger},
+    author    = {Yu, Zehao and Chen, Anpei and Antic, Bozidar and Peng, Songyou Peng and Bhattacharyya, Apratim 
+                 and Niemeyer, Michael and Tang, Siyu and Sattler, Torsten and Geiger, Andreas},
     title     = {SDFStudio: A Unified Framework for Surface Reconstruction},
     year      = {2022},
     url       = {https://github.com/autonomousvision/sdfstudio},
