add bakedsdf rendering

--- a/sdfstudio/index.html
+++ b/sdfstudio/index.html
@@ -219,6 +219,27 @@
           </video>
         </div>
 
+        <h3 class="title is-4">BakedSDF</h3>
+        <div class="content has-text-justified">
+          <p>
+            Reconstruction result of BakedSDF on the mip-NeRF 360 dataset.
+          </p>
+        </div>
+        
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 autoplay
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 loop
+                 width="110%">
+            <source src="./resources/garden.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+
         <h3 class="title is-4">UniSurf, VolSDF, and NeuS</h3>
         <div class="content has-text-justified">
           <p>
