add bakedangelo visualizatiion

--- a/sdfstudio/index.html
+++ b/sdfstudio/index.html
@@ -240,6 +240,40 @@
           </video>
         </div>
 
+        <h3 class="title is-4">Bakedangelo</h3>
+        <div class="content has-text-justified">
+          <p>
+            Reconstruction results of Bakedangelo on the Tanks and Temples dataset. Bakedangelo combines BakedSDF with numerical gridents and progressive training of Neuralangelo.
+          </p>
+        </div>
+        
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 autoplay
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 loop
+                 width="110%">
+            <source src="./resources/bakedangelo_tnt_courthouse.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 autoplay
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 loop
+                 width="110%">
+            <source src="./resources/bakedangelo_tnt_barn.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+
         <h3 class="title is-4">UniSurf, VolSDF, and NeuS</h3>
         <div class="content has-text-justified">
           <p>
