--- a/sdfstudio/index.html
+++ b/sdfstudio/index.html
@@ -519,7 +519,7 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@misc{Yu2022SDFStudio,
-    author    = {Yu, Zehao and Chen, Anpei and Antic, Bozidar and Peng, Songyou Peng and Bhattacharyya, Apratim 
+    author    = {Yu, Zehao and Chen, Anpei and Antic, Bozidar and Peng, Songyou and Bhattacharyya, Apratim 
                  and Niemeyer, Michael and Tang, Siyu and Sattler, Torsten and Geiger, Andreas},
     title     = {SDFStudio: A Unified Framework for Surface Reconstruction},
     year      = {2022},
